<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThankYouActivity">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/header">

        <!-- Back button -->
        <Button
            android:id="@+id/back_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/header"
            android:text="@string/back"
            android:textSize="20sp" />

        <!-- title -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/thanks_title"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <!-- Next button -->
        <Button
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/header"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/thanks_sub_heading"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <!-- User info -->
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/thanks_name"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/thanks_number"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/thanks_address"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/thanks_order"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black" />

</LinearLayout>