<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/header">

        <!-- Back button -->
        <Button
            android:id="@+id/back_btn"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/header"
            android:text="@string/back"
            android:textSize="20sp" />

        <!-- title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/menu_title"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black" />

        <!-- void button to make it look more neat and have the title centered -->
        <Button
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Pizza image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/menu_image"
        android:scaleType="centerCrop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/menu_btn"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

</LinearLayout>